Add preconnect on optimized version ✨

--- a/static/optimized/index.html
+++ b/static/optimized/index.html
@@ -7,6 +7,10 @@
   <title>Article with a font loading strategy - BuzzFeedJS</title>
   <meta name="description" content="Small web to showcase the benefits of font loading strategies.">
 
+  <!-- preconnect with google fonts cdns -->
+  <link rel="preconnect" href="https://fonts.googleapis.com/">
+  <link rel="preconnect" href="https://fonts.gstatic.com/">
+
   <style>
     body {
       font-family: Georgia, 'Times New Roman', Times, serif;
